styles.css
@import url("https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap");

:root {
  --main-font: "Architects Daughter", cursive;
  --size-6: 0.375rem;
  --size-10: 0.625rem;
  --size-16: 1rem;
  --size-20: 1.25rem;
  --size-26: 1.625rem;
  --size-30: 1.875rem;
  --size-50: 3.125rem;
}

* {
  box-sizing: border-box;
}

body {
  margin: 0;
  font-family: var(--main-font);
  font-weight: 400;
  font-style: normal;
  background-image: url('./assets/images/FYHBackground.png');
  background-repeat: no-repeat;
  background-size: 120rem;
}

ul {
  padding: 0;
  margin: 0;
  list-style: none;
}

.no-select {
  -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Old versions of Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome, Edge, Opera and Firefox */
}

.header {
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.navbar {
  gap: var(--size-30);
  padding: var(--size-6) var(--size-10);
}

.nav-container {
  display: flex;
  gap: var(--size-50);
}

.navbar-nav {
  display: flex;
  align-items: center;
  gap: var(--size-20);

}

.navbar-toggler {
  outline: none;
    background-color: #3c55a2;
    border: 2px solid #fff;
    border-radius: 5px;
    z-index: 10;
    position: relative;
}

.nav-list {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: var(--size-10);
}

.nav-container h1 {
  margin-bottom: 0;
  text-align: center;
  font-size: var(--size-30);
  text-decoration: underline;
}

div.img-container {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  top: 5%;

}

div.img-container img {
  width: 60%;
}

.nav-list li {
  font-size: var(--size-26);
  padding: var(--size-16);
  cursor: pointer;
  text-align: center;
}

.nav-list li.playing {
  text-decoration: underline;
}

ul.nav-list li:nth-child(4) {
  text-align: center;
}

.nav-list li span {
  font-size: var(--size-16);
}

p.list-footer {
  text-align: center;
  font-size: var(--size-16);
  padding: 0 var(--size-30) var(--size-30);
  margin: 0;
  line-height: 25px;
}

.hamburger {
  font-family: var(--main-font);
  font-weight: 400;
  font-style: normal;
  font-size: var(--size-30);
  color: #ffffff;
  cursor: pointer;
}

[aria-expanded="false"] ~ div.nav-container {
  display: none;
}

[aria-expanded="true"] ~ div.nav-container {
  display: flex;
  justify-content: center;
  flex-direction: column;
  color: #fff;
  position: absolute;
  right: 37%;
  top: 60px;
  background-color: #4e1c75;
  width: 450px;
  height: 92vh;
  box-shadow: -2px 2px 10px 2px #bfbfbf;
  border: 1px solid #ffffff;
  border-radius: 5px;
  z-index: 10;
}

.container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
}

.content-container {
  position: relative;
  display: flex;
  flex-direction: column;
  width: 420px;
  align-items: center;
  justify-content: space-evenly;
  gap: 10px;
  background-color: #3c55a2f4;
  box-shadow: -2px 2px 10px 2px #bfbfbf;
  border: 1px solid #ffffff;
  border-radius: 5px;
  padding-bottom: 30px;
  height: 89vh;
}

.vinyl {
  width: 280px;
  height: 270px;
}

.vinyl-area, .vinyl-container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.vinyl-area {
  flex-direction: column;
}

.time {
  color: #ffffff;
  display: inline;
  font-size: var(--size-20);
}

.time-container {
  display: flex;
  gap: 300px;
}


.progress-container {
  background: #fff;
  border-radius: 5px;
  cursor: pointer;
  margin: 10px 0;
  height: 7px;
  width: 85%;
}

.progress {
  background-color: rgb(91, 232, 78);
  border-radius: 5px;
  height: 100%;
  width: 0%;
  transition: width 0.1s linear;
}

.controls {
  display: flex;
  position: relative;
  justify-content: space-around;
  align-items: center;
  width: 284px;
  height: 110px;
}

.play-button {
  width: 90px;
  height: 90px;
  border-radius: 50%;
  background-color: #7f17ca;
  cursor: pointer;
}
.play-button:hover {
  background-color: #4e1c75;
}

.controls-area {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.controls-secondary {
  width: 60px;
  height: 60px;
  border-radius: 50%;
  background-color: #7f17ca;
  cursor: pointer;
}
.controls div {
  display: flex;
  justify-content: center;
}


footer {
  margin-top: 20px;
}

.footer-img-container {
  display: flex;
  gap: 20px;
}

.footer-img-container a > button {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 65px;
  height: 65px;
  border-radius: 50%;
  border: none;
  background-color: rgba(91, 232, 78, 0.763);
  font-size: var(--size-16);
  transition: 0.5ms;
  cursor: pointer;
}

.footer-img {
  width: 80px;
}

.footer-img-container a > button:hover {
  background-color: #4e1c75;
}


.previous,
.next {
  background-color: #7f17ca;
}
.previous:hover,
.next:hover {
  background-color: #4e1c75;
}


.footer-p {
  font-family: var(--main-font);
}

p.track-title {
  padding-left: 10px;
  font-size: var(--size-16);
}

.track-title,
.track-artist {
  font-weight: 400;
  color: #ffffff;
  font-size: 25px;
  text-align: center;
  letter-spacing: 0;
  line-height: normal;
}

.vinyl-container .vinyl {
  animation: rotate 2s linear infinite;

  animation-play-state: paused;
}

.vinyl-container.play .vinyl {
  animation-play-state: running;
}

@keyframes rotate {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

.from-back {
  animation: from-back 2s cubic-bezier(0.33, 1, 0.68, 1) 0s 1 normal forwards;
}

@keyframes from-back {
  0% {
    transform: scale(0.5);
    transform-origin: 50% 0%;
  }

  100% {
    transform: scale(1);
    transform-origin: 50% 0%;
  }
}

@media only screen and (max-width: 1080px) and (orientation: landscape) {
  div.content-container {
    display: grid; 
    grid-template-columns: 1fr 1fr;
    grid-template-areas: 'vinyl-area controls-area';
    width: 90%;
    height: clamp(75vh, 87vh, 90vh);
  }

  [aria-expanded="true"] ~ #navContainer {
    display: grid;
    grid-template-rows: 1fr;
    grid-template-columns: 1fr 1fr;
    grid-template-areas: 'img-container list-footer';
    position: absolute;
    right: 16px;
    top: 30px;
    width: 95%;
    height: 89vh;
    box-shadow: 0px 0px 20px rgba(52, 49, 75, 0.1);
    align-items: center;
    justify-items: center;
    z-index: 5;
  }

  div.img-container {
    flex-direction: column;
  }

  div.img-container h1 {
    font-size: var(--size-20);
    margin: 10px 0;
  }

  .nav-list {
    overflow: scroll;
    padding: 0px 0px;
    gap: 3px;
    position: relative;
    right: 14px;
    top: 20px;
  }

  


  .nav-container h1 {
    font-size: var(--size-26);
    margin: 10px 0;
  }



  .nav-list li.list-item {
    font-size: 14px;
    text-align: center;
    padding: 3px;
  }

  li.list-item span {
    font-size: var(--size-10);
  }

  .track-artist {
    font-size: var(--size-26);
    margin: 16px 0 6px;
  }

  .vinyl-area {
    justify-content: flex-start;
  }

  .vinyl-container .vinyl {
    width: 55%;
    height: 55%;
  }

  .hamburger {
    font-size: var(--size-20);
  }

  .controls-area {
    margin-top: 23px;
  }

  .controls-area footer {
    margin-top: var(--size-16);
    order: 4;
  }

  div.time-container {
    gap: 200px;
    order: 2;
  }

  div.progress-container {
    order: 3;
  }

  div.controls {
    order: 1;
  }


}

@media only screen and (min-width: 600px) and (max-width: 1024px) {
  .content-container {
    height: 85vh;
  }

  .vinyl {
    width: 250px;
    height: 250px;
  }

  .time-container {
    gap: 150px;
  }

  .controls {
    width: 240px;
    height: 90px;
  }

  .play-button {
    width: 80px;
    height: 80px;
  }

  .controls-secondary {
    width: 50px;
    height: 50px;
  }

  .footer-img-container a > button {
    width: 55px;
    height: 55px;
  }

  .footer-img {
    width: 70px;
  }

  [aria-expanded="true"] ~ div.nav-container {
    right: 27%;
  }

  .nav-list li {
    font-size: var(--size-20);
  }

  .track-artist {
    font-size: var(--size-20);
  }
}

@media only screen and (min-width: 431px) and (max-width: 850px) {
  [aria-expanded="true"] ~ div.nav-container {
    right: 25%;
  }
}
@media only screen and (min-width: 431px) and (max-width: 617px) {
  [aria-expanded="true"] ~ div.nav-container {
    right: 15%;
  }
}

@media only screen and (min-width: 255px) and (max-width: 600px) {
  [aria-expanded="true"] ~ div.nav-container {
    z-index: 5;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: var(--size-10);
    position: absolute;
    right: 9px;
    top: 60px;
    background-color: #4e1c75;
    width: 95%;
    height: 92vh;
    box-shadow: 0px 0px 20px rgba(52, 49, 75, 0.1);
    justify-content: space-evenly;
  }

div.img-container {
  top: 0%;
}

div.img-container img {
  width: 63%;
}

  .content-container {
    width: 93vw;
  }

  .track-artist {
    font-size: var(--size-20);
    margin-bottom: 0px;
  }


  .time-container {
    gap: 50vw;
  }

  .vinyl {
    position: relative;
    width: 250px;
    height: 240px;
  }

  .time {
    font: var(--size-16);
  }

  .controls {
    justify-content: space-evenly;
  }

  .play-button {
    width: 80px;
    height: 80px;
  }

  .controls-secondary {
    width: 55px;
    height: 55px;
  }

  .nav-list {
    overflow: scroll;
  }


  .nav-container h1 {
    font-size: var(--size-26);
  }



  .nav-list li {
    font-size: var(--size-20);
    text-align: center;
  }

  footer {
    margin-top: 0px;
  }

  .footer-img-container a > button {
    width: 50px;
    height: 50px;
  }

  .footer-img {
    width: 60px;
  }

  p.list-footer {
    margin: 0;
    padding-top: var(--size-10);
    padding-bottom: var(--size-6);
    font-size: var(--size-16);
    line-height: 20px;
  }



}

